--- a/src/main/resources/templates/product-form.html
+++ b/src/main/resources/templates/product-form.html
@@ -21,7 +21,8 @@
 
                 <div class="mb-3">
                     <label class="form-label">Nom</label>
-                    <input type="text" class="form-control" th:field="*{name}" placeholder="Nom du produit" required>
+                    <input type="text" class="form-control" th:field="*{name}" placeholder="Nom du produit">
+                    <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
                 </div>
 
                 <div class="mb-3">
@@ -32,7 +33,9 @@
                 <div class="mb-3">
                     <label class="form-label">Quantité</label>
                     <input type="number" class="form-control" th:field="*{quantity}" placeholder="Quantité" required>
+                    <div class="text-danger" th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"></div>
                 </div>
+
 
                 <div class="d-flex justify-content-between">
                     <button type="submit" class="btn btn-success">💾 Enregistrer</button>
