--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layout}">
 
 <head>
@@ -13,7 +14,7 @@
 
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>📦 Liste des Produits</h2>
-        <a href="/create" class="btn btn-success">➕ Nouveau produit</a>
+        <a sec:authorize="hasRole('ADMIN')" href="/admin/create" class="btn btn-success">➕ Nouveau produit</a>
     </div>
 
     <table class="table table-hover table-bordered table-striped align-middle">
@@ -23,7 +24,7 @@
             <th>Nom</th>
             <th>Prix</th>
             <th>Quantité</th>
-            <th>Actions</th>
+            <th sec:authorize="hasRole('ADMIN')">Actions</th>
         </tr>
         </thead>
         <tbody>
@@ -32,9 +33,9 @@
             <td th:text="${product.name}"></td>
             <td th:text="${product.price} + ' DH'"></td>
             <td th:text="${product.quantity}"></td>
-            <td>
-                <a th:href="@{'/edit/' + ${product.id}}" class="btn btn-sm btn-warning">Modifier</a>
-                <a th:href="@{'/delete/' + ${product.id}}" class="btn btn-sm btn-danger"
+            <td sec:authorize="hasRole('ADMIN')">
+                <a sec:authorize="hasRole('ADMIN')" th:href="@{'/admin/edit/' + ${product.id}}" class="btn btn-sm btn-warning">Modifier</a>
+                <a sec:authorize="hasRole('ADMIN')" th:href="@{'/admin/delete/' + ${product.id}}" class="btn btn-sm btn-danger"
                    onclick="return confirm('Supprimer ce produit ?')">Supprimer</a>
             </td>
         </tr>
